bug 14562 API Create An Expression Page, text in text field displaying a little too low, resulting in letters appear cut below baseline

--- a/src/app/search/exp/exp-form/exp-form.component.css
+++ b/src/app/search/exp/exp-form/exp-form.component.css
@@ -1,8 +1,9 @@
-.form-control,
-.values-container {
+select.form-control{
+	padding :2px 12px;
+}	
+.form-control, .values-container{
 	display :inline-block;
 	width :auto;
-	padding :2px 12px;
 }
 .values-container[hidden]{
 	display:none;
